--- a/PyTorch_01.ipynb
+++ b/PyTorch_01.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "PrzIc-02G5V1"
       },
@@ -105,7 +105,7 @@
         "id": "fhuPzB0EJZFL",
         "outputId": "2c43746d-0a67-4d44-eb04-0487b2804192"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "id": "dAbBd8KrNOJO",
         "outputId": "6e49f9bc-d5d7-48e1-9e6d-4ffc3ef8b712"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
         "id": "vSI-LwZpNT9a",
         "outputId": "deb3fa83-8646-4b89-d7ab-4c1c492cd650"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "1vwmGPJnRTE_"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -275,7 +275,7 @@
         "id": "78f3Hf2rSDbt",
         "outputId": "fee2b6da-cfac-4cf2-bf82-38aca34a2af9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -344,7 +344,7 @@
       "metadata": {
         "id": "VeRMLtGtVq4U"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -392,7 +392,7 @@
         },
         "outputId": "590b607f-ca04-4908-af8f-49bc530c8f5d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +422,7 @@
         "id": "LPJgDC7_yKZX",
         "outputId": "653aae4e-6b58-4b89-af9f-3a9c79988264"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,7 +469,7 @@
         "id": "q3zYWmAk0Dbo",
         "outputId": "12db25a0-0b38-485f-d512-6a1a7d68923d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +505,7 @@
         "id": "v_P90pmd2WTi",
         "outputId": "4567279b-6f44-47c8-b7c4-6358cce43d6d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -577,7 +577,7 @@
         "id": "1uH4AQIIB6Fu",
         "outputId": "5eb81204-b104-4ccd-c8ef-84d05048d458"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -613,7 +613,7 @@
       "metadata": {
         "id": "NhsrMJ8w2rp-"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -774,7 +774,7 @@
         "id": "YVEH5FrG-ya-",
         "outputId": "b9eae759-04d2-496b-ecf2-696e01fb9c4b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1000,7 @@
       "metadata": {
         "id": "m2KwnmR2ZLi6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1017,7 +1017,7 @@
         "id": "DRX9r65pf1Fn",
         "outputId": "b37c223b-64ef-4832-c5f7-09092a7acbec"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1057,7 +1057,7 @@
         "id": "TbgEt71RR1xW",
         "outputId": "5ca3ac4a-18cf-4e9b-e0ad-9d5375f442bf"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1074,7 +1074,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Saving a model in PyTorch\n",
+        "## 4. Saving a model in PyTorch\n",
         "\n",
         "There is a method we can use to saving and loading models in PyTorch:\n",
         "1. `torch.save()` - allows to save a PyTorch object in [Python's pickle](https://docs.python.org/3/library/pickle.html) format.\n",
@@ -1112,7 +1112,7 @@
         "id": "ZQ3tNNi4SkTU",
         "outputId": "4027953d-e0bb-4d91-d0b7-53c8d242aac1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1126,7 +1126,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Loading a saved PyTorch model\n",
+        "## 5. Loading a saved PyTorch model\n",
         "\n",
         "To perform that we can use:\n",
         "1. `torch.load()` - allows to load a saved PyTorch object.\n",
@@ -1154,7 +1154,7 @@
         "id": "tkj3Tr93kiq9",
         "outputId": "ad0f8cc0-9e51-4f9b-962c-1246d5d65df6"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1184,7 +1184,7 @@
         "id": "uDrLPsULm7Qc",
         "outputId": "aad21fcd-b0a6-49d6-8767-413159359e62"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1215,7 +1215,7 @@
         "id": "g1X6Gu-8pYWD",
         "outputId": "c01c24b1-0f7a-49ae-be59-423336f0f301"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1256,7 +1256,7 @@
         "id": "ulh8kMBOntr8",
         "outputId": "e2eb6174-e314-4398-8b4e-acc9a80cbffe"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1292,7 +1292,7 @@
         "id": "EzlJCIBKn2yR",
         "outputId": "409e8074-5e2f-40ca-c942-0240c027c8b1"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1318,7 +1318,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Putting all together "
+        "## 6. Putting all together "
       ],
       "metadata": {
         "id": "s59XyNa_p_Gx"
@@ -1344,7 +1344,7 @@
       "metadata": {
         "id": "hcIRYI9ZpOT-"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1377,7 +1377,7 @@
         "id": "IsOQ-1bRrFfp",
         "outputId": "7ef8e0c6-667f-48e2-f802-bb4f71f63136"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1436,7 +1436,7 @@
       "metadata": {
         "id": "WJQk6tkjqovY"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1455,7 +1455,7 @@
         "id": "aCjccTA0tdrX",
         "outputId": "a30666dd-a7c3-4a05-db0d-3adf6fa3969d"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1500,7 +1500,7 @@
       "metadata": {
         "id": "ZspSfVnnCwRh"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1516,7 +1516,7 @@
         "id": "-svm2CJnuqNw",
         "outputId": "551786e6-d7c9-46e9-d324-9ba54f702437"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1542,7 +1542,7 @@
       "metadata": {
         "id": "b9HP1dTSLlK1"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1582,7 +1582,7 @@
         "id": "tKmqcxrfuuGb",
         "outputId": "646ffd9a-cb86-4bbe-ed59-b823437d0700"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1613,7 +1613,7 @@
         "id": "9pw-O2B_xqEb",
         "outputId": "30fc1623-5a6c-4d0c-cd1b-34ffdd2e956f"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1641,7 +1641,7 @@
         "id": "7xoIWezXzZL1",
         "outputId": "4fa4518b-86f3-44e3-d9ee-d755b29b8dd5"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1687,7 +1687,7 @@
       "metadata": {
         "id": "mMfior3mz5N0"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1708,7 +1708,7 @@
       "metadata": {
         "id": "kQ-QE91C0gga"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1778,7 +1778,7 @@
         "id": "lUKDzZ_50uGy",
         "outputId": "b6784ec7-b9d3-4561-b2c7-4d5529ce3157"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1850,7 +1850,7 @@
         "id": "1b27GVJP8J5b",
         "outputId": "bb78869c-ce45-490b-cf09-b26026574b8a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1881,7 +1881,7 @@
       "metadata": {
         "id": "Dz7_9vQdGFWq"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1897,7 +1897,7 @@
         "id": "ThRo0d568o14",
         "outputId": "e091b087-9cf0-4c16-8173-3766595905b1"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1943,7 +1943,7 @@
       "metadata": {
         "id": "lJhlpwJK-MZm"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1960,7 +1960,7 @@
         "id": "C3jptJQtLBz_",
         "outputId": "aff97dd3-ae5f-46c7-ddc8-8399a0e3de7a"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2008,7 +2008,7 @@
         "id": "IVR9SUMiLVs-",
         "outputId": "35deac4b-709a-472e-894c-2aa685776281"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2038,7 +2038,7 @@
         "id": "E0-9yxUXMJZS",
         "outputId": "5b5181b3-f32f-4382-b58f-87d370d00b5e"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2066,7 +2066,7 @@
         "id": "9k-sNQ32M8yR",
         "outputId": "6a171c6b-10ad-46b7-a8cd-3da73cba74d6"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2098,7 +2098,7 @@
         "id": "E4r6fCPlOO9c",
         "outputId": "26430f37-2425-49ea-9706-8fca250c6d28"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2324,7 +2324,7 @@
         "id": "w8YaB7IwOgEl",
         "outputId": "4761901a-66a1-4d0c-b406-b71aff079b35"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
