--- a/00_basics_pytorch.ipynb
+++ b/00_basics_pytorch.ipynb
@@ -19,6 +19,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/eliaszpiotr/PyTorch/blob/master/00_basics_pytorch.ipynb)"
+      ],
+      "metadata": {
+      }
+    },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
         "#PyTorch Basics"
       ],
       "metadata": {
